# TapeSort

./: CMakeLists.txt  README.md  TapeSorter.cpp  config.json  main.cpp  parcing.cpp  parcing.h
lib/: CMakeLists.txt  Tape.cpp  Tape.h  TapeSorter.cpp  TapeSorter.h
test/: in.txt
tests/: CMakeLists.txt  sortTests.cpp
tmp/: rec1
